{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 27,
  "lineage": "e27cce8a-e571-4f9d-34d6-4babdd0418d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04693308f52ac8079",
            "arn": "arn:aws:ec2:ap-south-2:695450433663:elastic-ip/eipalloc-04693308f52ac8079",
            "association_id": "eipassoc-08a5b2f480105f006",
            "domain": "vpc",
            "id": "eipalloc-04693308f52ac8079",
            "network_border_group": "ap-south-2",
            "network_interface": "eni-05d39dd7bc08e9f25",
            "private_dns": "ip-10-0-1-83.ap-south-2.compute.internal",
            "private_ip": "10.0.1.83",
            "public_dns": "ec2-18-60-16-10.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.60.16.10",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloudops-eip"
            },
            "tags_all": {
              "Name": "cloudops-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:695450433663:internet-gateway/igw-01b10c73491de5fa5",
            "id": "igw-01b10c73491de5fa5",
            "owner_id": "695450433663",
            "tags": {
              "Name": "cloudops-igw"
            },
            "tags_all": {
              "Name": "cloudops-igw"
            },
            "vpc_id": "vpc-02a5c0d837409afb3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04693308f52ac8079",
            "association_id": "eipassoc-08a5b2f480105f006",
            "connectivity_type": "public",
            "id": "nat-0b89ec91d14cf61e3",
            "network_interface_id": "eni-05d39dd7bc08e9f25",
            "private_ip": "10.0.1.83",
            "public_ip": "18.60.16.10",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-016ca4bf2ca5bfc53",
            "tags": {
              "Name": "cloudops-nat"
            },
            "tags_all": {
              "Name": "cloudops-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:695450433663:route-table/rtb-0278cb850127e89ca",
            "id": "rtb-0278cb850127e89ca",
            "owner_id": "695450433663",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b89ec91d14cf61e3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudops-private-rt"
            },
            "tags_all": {
              "Name": "cloudops-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a5c0d837409afb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:695450433663:route-table/rtb-0f6b8290d342573a7",
            "id": "rtb-0f6b8290d342573a7",
            "owner_id": "695450433663",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b10c73491de5fa5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudops-public-rt"
            },
            "tags_all": {
              "Name": "cloudops-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a5c0d837409afb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013138dedfc897d7b",
            "route_table_id": "rtb-0278cb850127e89ca",
            "subnet_id": "subnet-0ab3549264ed13fbf"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e75d011f27f1d0a",
            "route_table_id": "rtb-0278cb850127e89ca",
            "subnet_id": "subnet-09778f18a58596f51"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c715a65320ceb17a",
            "route_table_id": "rtb-0f6b8290d342573a7",
            "subnet_id": "subnet-016ca4bf2ca5bfc53"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af2df3f70f07673c",
            "route_table_id": "rtb-0f6b8290d342573a7",
            "subnet_id": "subnet-0c8e44207a9031c90"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:695450433663:security-group/sg-0174e75c7435f6582",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0174e75c7435f6582",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloudops-alb-sg",
            "name_prefix": "",
            "owner_id": "695450433663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudops-alb-sg"
            },
            "tags_all": {
              "Name": "cloudops-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a5c0d837409afb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:695450433663:security-group/sg-084cc256df5f40574",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084cc256df5f40574",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0174e75c7435f6582"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "cloudops-app-sg",
            "name_prefix": "",
            "owner_id": "695450433663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudops-app-sg"
            },
            "tags_all": {
              "Name": "cloudops-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a5c0d837409afb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:695450433663:security-group/sg-038afa99ebb8f28fc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038afa99ebb8f28fc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084cc256df5f40574"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "cloudops-db-sg",
            "name_prefix": "",
            "owner_id": "695450433663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudops-db-sg"
            },
            "tags_all": {
              "Name": "cloudops-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a5c0d837409afb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:695450433663:subnet/subnet-0ab3549264ed13fbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab3549264ed13fbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "695450433663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudops-private-1"
            },
            "tags_all": {
              "Name": "cloudops-private-1"
            },
            "vpc_id": "vpc-02a5c0d837409afb3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:695450433663:subnet/subnet-09778f18a58596f51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09778f18a58596f51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "695450433663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudops-private-2"
            },
            "tags_all": {
              "Name": "cloudops-private-2"
            },
            "vpc_id": "vpc-02a5c0d837409afb3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:695450433663:subnet/subnet-016ca4bf2ca5bfc53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016ca4bf2ca5bfc53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "695450433663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudops-public-1"
            },
            "tags_all": {
              "Name": "cloudops-public-1"
            },
            "vpc_id": "vpc-02a5c0d837409afb3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:695450433663:subnet/subnet-0c8e44207a9031c90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8e44207a9031c90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "695450433663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudops-public-2"
            },
            "tags_all": {
              "Name": "cloudops-public-2"
            },
            "vpc_id": "vpc-02a5c0d837409afb3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:695450433663:vpc/vpc-02a5c0d837409afb3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08219b109f99a6c52",
            "default_route_table_id": "rtb-029cd47e6c7a2f10a",
            "default_security_group_id": "sg-070b9e4e2fa40f43d",
            "dhcp_options_id": "dopt-042f4834225628ae5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a5c0d837409afb3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-029cd47e6c7a2f10a",
            "owner_id": "695450433663",
            "tags": {
              "Name": "cloudops-vpc"
            },
            "tags_all": {
              "Name": "cloudops-vpc"
            }
          }
        }
      ]
    }
  ]
}